Fix text alignment
Fixed text alignment on "about university" page

--- a/Ynus/static/css/about_univ.css
+++ b/Ynus/static/css/about_univ.css
@@ -66,7 +66,7 @@ section {
   width: 1100px;
   font-family: 'Montserrat', sans-serif;
   font-size: 30px;
-  margin-bottom: 5%;
+  margin-bottom: 3%;
 }
 
 
@@ -74,13 +74,16 @@ section {
   color: #0079C4;
   font-size: 21px;
   text-transform: uppercase;
-  margin-bottom: 10%;
+  margin-bottom: 8%;
+  display: flex;
+}
+.niu_p {
+  padding-top: 19px;
 }
 
 .miet_text b{
   font-size: 96px;
   font-weight: 500;
-  float:left;
 }
 .miet_text p{
   margin-bottom:1px;
